2003-08-07  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* progmodes/ebnf2ps.el (ebnf-begin-job): Code fix.


2003-08-06  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/calendar.el (list-diary-entries-hook)
	(diary-display-hook, nongregorian-diary-listing-hook)
	(mark-diary-entries-hook, nongregorian-diary-marking-hook): Add
	some customize options for these hooks.
	(calendar-abbrev-construct): Don't try to take a substring longer
	than the original string.

2003-08-05  Richard M. Stallman  <rms@gnu.org>

	* emacs-lisp/testcover.el (noreturn): Report error if does return.
	(testcover-reinstrument-clauses): Doc fix.

	* emacs-lisp/warnings.el: Doc fixes, args renamed.
	(warning-type-format): Renamed from warning-group-format.

	* emacs-lisp/bytecomp.el (byte-compile-not-obsolete-var): New var.
	(byte-compile-variable-ref): Handle byte-compile-not-obsolete-var.
	(byte-compile-defvar): Bind byte-compile-not-obsolete-var
	to prevent warnings about defvar for an obsolete variable.
	
	* emacs-lisp/bytecomp.el (byte-compile-log-warning):
	warning-group-format renamed to warning-type-format.

	* subr.el (read-passwd): Use clear-string instead of fillarray.

	* edmacro.el (edmacro-format-keys): Use edmacro-sanitize-for-string.
	Use vconcat instead of concat.
	(edmacro-sanitize-for-string): New function.

2003-08-05  Dave Love  <fx@gnu.org>

	* cus-start.el: Add open-paren-in-column-0-is-defun-start,
	line-number-display-limit-width.

	* textmodes/tex-mode.el (tex-dvi-view-command): Fix quoted quotes.

2003-08-05  Kenichi Handa  <handa@m17n.org>

	* international/code-pages.el: Don't require mule-diag.

	* international/mule-diag.el (non-iso-charset-alist): Add
	autoload cookie.

	* language/devan-util.el (dev-glyph-order): Add an entry for the
	glyph code #xC4.

2003-08-03  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/calendar.el (diary-file, diary-file-name-prefix)
	(european-calendar-style, diary-date-forms)